# ScreenSeekeR-Desktop-Automation

./: .env.example  .gitignore  README.md  pyproject.toml
doc/: api_reference.md  local_model_guide.md  methodology.md  setup_guide.md
src/: config.py  main.py
src/api/: __init__.py  posts.py
src/automation/: __init__.py  desktop.py  notepad.py  popups.py
src/grounding/: __init__.py  grounder.py  llm_client.py  planner.py  scoring.py  screenseeker.py  screenshot.py
src/grounding/local_model/: __init__.py  _inference_utils.py  client.py  gui_actor_adapter.py  modeling_qwen25vl.py
src/utils/: __init__.py  logging.py  retry.py
tests/: __init__.py  test_api.py  test_grounding.py  test_scoring.py
