[project]
name = "tjm-vision-automation"
version = "0.1.0"
description = "Vision-based Desktop Automation with ScreenSeekeR and Google Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "openai>=1.12.0",
    "groq>=0.9.0",
    "ollama>=0.2.0",
    "pillow>=10.2.0",
    "mss>=9.0.1",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "requests>=2.31.0",
    "tenacity>=8.2.3",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
local = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "accelerate>=0.30.0",
    "qwen-vl-utils>=0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
